redis-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-node
spec:
  serviceName: "redis-node"
  replicas: 6
  selector:
    matchLabels:
      app: redis-node
  template:
    metadata:
      labels:
        app: redis-node
    spec:
      containers:
        - name: redis-node
          image: redis/redis-stack:latest
          command:
            - redis-server
          args:
            - /configs/node.conf
          ports:
            - containerPort: 6973
          volumeMounts:
            - name: config
              mountPath: /configs
              subPath: node.conf
            - name: logs
              mountPath: /logs
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: logs
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
  updateStrategy:
    type: RollingUpdate
