redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-node
spec:
  ports:
    - name: redis
      port: 6973
      targetPort: 6973
  selector:
    app: redis-node
  clusterIP: None
