redis-svc-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-lb
  namespace: redis
  labels:
    app: redis-cluster
spec:
  type: LoadBalancer
  selector:
    app: redis-cluster
  ports:
    - name: client
      port: 6379
      targetPort: 6379
    - name: gossip
      port: 16379
      targetPort: 16379
