redis-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-cluster
  namespace: redis
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: mungtage.site
      http:
        paths:
          - path: /0
            pathType: Prefix
            backend:
              service:
                name: redis-cluster-0.redis.svc.cluster.local
                port:
                  number: 6379
          - path: /1
            pathType: Prefix
            backend:
              service:
                name: redis-cluster-1.redis.svc.cluster.local
                port:
                  number: 6379
          - path: /2
            pathType: Prefix
            backend:
              service:
                name: redis-cluster-2.redis.svc.cluster.local
                port:
                  number: 6379
          - path: /3
            pathType: Prefix
            backend:
              service:
                name: redis-cluster-3.redis.svc.cluster.local
                port:
                  number: 6379
          - path: /4
            pathType: Prefix
            backend:
              service:
                name: redis-cluster-4.redis.svc.cluster.local
                port:
                  number: 6379
          - path: /5
            pathType: Prefix
            backend:
              service:
                name: redis-cluster-5.redis.svc.cluster.local
                port:
                  number: 6379
